--- a/picuzzle/Base.lproj/Main.storyboard
+++ b/picuzzle/Base.lproj/Main.storyboard
@@ -10,10 +10,93 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Page View Controller-->
+        <scene sceneID="fAW-AM-f3s">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="krq-ny-9rH" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1tp-fn-1N2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3622" y="790"/>
+        </scene>
+        <!--Content View Controller-->
+        <scene sceneID="DVQ-Ns-UYw">
+            <objects>
+                <viewController storyboardIdentifier="ContentViewController" id="Xot-D7-4oP" customClass="ContentViewController" customModule="picuzzle" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MK7-Zj-6KT"/>
+                        <viewControllerLayoutGuide type="bottom" id="Pur-WQ-1PT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qRi-MV-MFA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d6C-3q-blC">
+                                <rect key="frame" x="16" y="45" width="343" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="6iS-Ik-t5K">
+                                <rect key="frame" x="166" y="86" width="42" height="163"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iiK-hg-l7l">
+                                        <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aY-pG-4Li">
+                                        <rect key="frame" x="0.0" y="35.5" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YzI-np-K6e">
+                                        <rect key="frame" x="0.0" y="71" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lWK-Nt-7Y4">
+                                        <rect key="frame" x="0.0" y="106.5" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZY-pB-wUC">
+                                        <rect key="frame" x="0.0" y="142" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="d6C-3q-blC" firstAttribute="leading" secondItem="qRi-MV-MFA" secondAttribute="leadingMargin" id="PTF-1C-agO"/>
+                            <constraint firstItem="d6C-3q-blC" firstAttribute="trailing" secondItem="qRi-MV-MFA" secondAttribute="trailingMargin" id="dfs-hd-xuw"/>
+                            <constraint firstItem="d6C-3q-blC" firstAttribute="top" secondItem="MK7-Zj-6KT" secondAttribute="bottom" constant="25" id="uHU-9z-eK9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="d6C-3q-blC" id="lU9-wR-W3w"/>
+                        <outletCollection property="highscoreList" destination="iiK-hg-l7l" collectionClass="NSMutableArray" id="peU-nG-72o"/>
+                        <outletCollection property="highscoreList" destination="1aY-pG-4Li" collectionClass="NSMutableArray" id="B0A-sO-20n"/>
+                        <outletCollection property="highscoreList" destination="YzI-np-K6e" collectionClass="NSMutableArray" id="PYZ-x6-RoP"/>
+                        <outletCollection property="highscoreList" destination="lWK-Nt-7Y4" collectionClass="NSMutableArray" id="aiu-cH-tjW"/>
+                        <outletCollection property="highscoreList" destination="VZY-pB-wUC" collectionClass="NSMutableArray" id="PLC-s6-xm9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f1h-iA-y1Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2829" y="789"/>
+        </scene>
         <!--Highscore View Controller-->
         <scene sceneID="ID1-yK-NLl">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="h5O-vo-bMW" customClass="HighscoreViewController" customModule="picuzzle" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HighscoreViewController" automaticallyAdjustsScrollViewInsets="NO" id="h5O-vo-bMW" customClass="HighscoreViewController" customModule="picuzzle" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wj1-UA-2b0"/>
                         <viewControllerLayoutGuide type="bottom" id="Ds3-cI-pje"/>
@@ -65,42 +148,18 @@
                                     <constraint firstItem="8i8-Cw-n5m" firstAttribute="top" secondItem="1Dm-K7-TQR" secondAttribute="top" constant="25" id="jmr-30-lec"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nyF-ht-4v5">
-                                <rect key="frame" x="0.0" y="60" width="375" height="607"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAS-TQ-k7e">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="606"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="aAS-TQ-k7e" secondAttribute="bottom" id="5ww-wE-dVL"/>
-                                    <constraint firstItem="aAS-TQ-k7e" firstAttribute="top" secondItem="nyF-ht-4v5" secondAttribute="top" id="N2c-sJ-lQJ"/>
-                                    <constraint firstItem="aAS-TQ-k7e" firstAttribute="centerX" secondItem="nyF-ht-4v5" secondAttribute="centerX" id="dwQ-9w-owe"/>
-                                    <constraint firstItem="aAS-TQ-k7e" firstAttribute="leading" secondItem="nyF-ht-4v5" secondAttribute="leading" id="g7f-Ap-Gfg"/>
-                                    <constraint firstItem="aAS-TQ-k7e" firstAttribute="centerY" secondItem="nyF-ht-4v5" secondAttribute="centerY" id="ufu-OE-vgv"/>
-                                    <constraint firstAttribute="trailing" secondItem="aAS-TQ-k7e" secondAttribute="trailing" id="xZD-Wo-s5b"/>
-                                </constraints>
-                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ds3-cI-pje" firstAttribute="top" secondItem="nyF-ht-4v5" secondAttribute="bottom" id="1zL-p7-tq5"/>
-                            <constraint firstItem="nyF-ht-4v5" firstAttribute="leading" secondItem="U8v-3W-8Gc" secondAttribute="leadingMargin" constant="-16" id="E6N-EL-PCJ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="nyF-ht-4v5" secondAttribute="trailing" constant="-16" id="Nrb-8A-vdR"/>
                             <constraint firstAttribute="trailing" secondItem="1Dm-K7-TQR" secondAttribute="trailing" id="VyZ-jW-7Ak"/>
                             <constraint firstItem="1Dm-K7-TQR" firstAttribute="leading" secondItem="U8v-3W-8Gc" secondAttribute="leading" id="efd-4Y-6Am"/>
                             <constraint firstItem="1Dm-K7-TQR" firstAttribute="top" secondItem="wj1-UA-2b0" secondAttribute="bottom" constant="-20" id="fzL-6u-c24"/>
-                            <constraint firstItem="nyF-ht-4v5" firstAttribute="top" secondItem="1Dm-K7-TQR" secondAttribute="bottom" id="grw-RE-KpD"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="scrollUIView" destination="aAS-TQ-k7e" id="EJ1-B8-cC2"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vRQ-Wn-vmf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2103" y="792"/>
+            <point key="canvasLocation" x="-2103.1999999999998" y="791.15442278860576"/>
         </scene>
         <!--Loading Screen View Controller-->
         <scene sceneID="Ixv-BX-Adk">
@@ -460,7 +519,7 @@
                                     <constraint firstItem="rot-oZ-a6c" firstAttribute="centerX" secondItem="YSo-hT-2gD" secondAttribute="centerX" id="wV2-8N-6z1"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="efs-bC-byi">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="efs-bC-byi">
                                 <rect key="frame" x="16" y="85" width="343" height="161"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="QMr-ky-7ic">
@@ -630,6 +689,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Z81-3m-dum"/>
+        <segue reference="tHA-BY-gqx"/>
     </inferredMetricsTieBreakers>
 </document>
