--- a/picuzzle/Base.lproj/Main.storyboard
+++ b/picuzzle/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0t4-mT-HD8">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0t4-mT-HD8">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -674,6 +674,7 @@
                                                 </state>
                                                 <connections>
                                                     <action selector="abortBtnPressed:" destination="D1S-hh-S3J" eventType="touchUpInside" id="xk9-1s-PNv"/>
+                                                    <action selector="backBtnPressed:" destination="MKh-B4-1yb" eventType="touchUpInside" id="SZJ-os-LXk"/>
                                                     <segue destination="0t4-mT-HD8" kind="show" id="4Dc-Qn-ztj"/>
                                                 </connections>
                                             </button>
